bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:1: error: type mismatch;
 found   : Unit
 required: Boolean
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
                                                     ^